[gd_scene load_steps=6 format=3 uid="uid://b6xyp4y3xhh2x"]

[ext_resource type="Script" path="res://Scenes/UI/pannel_window.gd" id="1_e5d64"]
[ext_resource type="Texture2D" uid="uid://cnnan4q1px3io" path="res://icons/healthbarUnder.png" id="2_bnkgs"]
[ext_resource type="Texture2D" uid="uid://b703a07elmwad" path="res://icons/healthbarProgress.png" id="3_enec1"]

[sub_resource type="Theme" id="Theme_r1pme"]

[sub_resource type="Theme" id="Theme_jiyu5"]

[node name="Window" type="PanelContainer"]
visibility_layer = 512
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -296.0
offset_top = 16.0
offset_right = -18.0
offset_bottom = 147.0
grow_horizontal = 0
theme = SubResource("Theme_r1pme")
script = ExtResource("1_e5d64")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TitleLine" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MiniPortrait" type="TextureRect" parent="VBoxContainer/TitleLine"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
expand_mode = 1

[node name="Title" type="Label" parent="VBoxContainer/TitleLine"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="CloseBox" type="Button" parent="VBoxContainer/TitleLine"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Close"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_jiyu5")
theme_override_constants/margin_left = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Health" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Health: x/y"

[node name="HealthBar" type="TextureProgressBar" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
nine_patch_stretch = true
texture_under = ExtResource("2_bnkgs")
texture_progress = ExtResource("3_enec1")

[node name="StatusLine" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 0

[connection signal="pressed" from="VBoxContainer/TitleLine/CloseBox" to="." method="_on_close_box_pressed"]
